[package]
name = "witas"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An asynchronous window library in Rust for Windows"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
repository = "https://github.com/LNSEAB/witas"
documentation = "https://docs.rs/witas"
keywords = ["gui", "windows"]
categories = ["gui"]

[features]
coinit = ["dep:coinit"]
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0.66"
coinit = { version = "0.1.10", optional = true }
num = "0.4.0"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"], optional = true }
tokio = { version = "1.22.0", features = ["sync"] }

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
