[package]
name = "witas_icon_resource"
version = "0.1.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2021"
publish = false

[build-dependencies]
embed-resource = "1.7.4"

[dependencies]
witas = { path = "../.." }
anyhow = { version = "1.0.66", features = ["backtrace"] }
tokio = { version = "1.23.0", features = ["full"] }
